# TauriPluginCli

./: CHANGELOG.md  Cargo.toml  DEPENDENTS.md  README.md  api-iife.js  build.rs  package.json
Source/: config.rs  error.rs  lib.rs  parser.rs
Source/parser/: macros.rs
dist-js/: index.cjs  index.d.ts  index.js
guest-js/: index.ts
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: lib.rs  parser.rs
