[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
clap = { version = "4", features = ["string"] }
log = { version = "0.4.25" }
serde = { version = "1.0.217" }
serde_json = { version = "1.0.138" }
tauri = { version = "2.2.5" }
thiserror = { version = "2.0.11" }

[lib]
path = "Source/lib.rs"

[package]
authors = ["Tauri Programme within The Commons Conservancy"]
description = "Parse arguments from your Tauri application's command line interface."
edition = "2021"
license-file = "LICENSE"
links = "tauri-plugin-cli"
name = "tauri-plugin-cli"
rust-version = "1.77.2"
version = "2.2.0"

[package.metadata]

[package.metadata.docs]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms]

[package.metadata.platforms.support]
android = { level = "none", notes = "" }
ios = { level = "none", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
windows = { level = "full", notes = "" }
